# template_OpenGL_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Engine.hpp  IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  main.h  shader.hpp
res/shaders/: basic.shader  basictexture.shader
scripts/: build.sh  run.sh
src/: Engine.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  main.cpp  shader.cpp
